--- a/src/main/java/Handelsakademin/StoreProgram/EmployeeForm.form
+++ b/src/main/java/Handelsakademin/StoreProgram/EmployeeForm.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="640" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-1247233"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="c4cfd" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -13,7 +15,9 @@
         <constraints>
           <grid row="1" column="0" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1509377"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
@@ -22,7 +26,9 @@
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1509377"/>
+        </properties>
         <border type="none"/>
         <children>
           <grid id="b84d" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -30,7 +36,9 @@
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-1509377"/>
+            </properties>
             <border type="none"/>
             <children>
               <component id="b697a" class="javax.swing.JButton" binding="createEmployeeButton">
@@ -38,6 +46,7 @@
                   <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-1146675"/>
                   <text value="Create new employee"/>
                 </properties>
               </component>
@@ -46,6 +55,7 @@
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-1146675"/>
                   <text value="Go to inventory"/>
                 </properties>
               </component>
@@ -54,6 +64,7 @@
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-1146675"/>
                   <text value="Create new product"/>
                 </properties>
               </component>
@@ -62,7 +73,9 @@
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
-                <properties/>
+                <properties>
+                  <background color="-1509377"/>
+                </properties>
                 <border type="none"/>
                 <children/>
               </grid>
@@ -71,6 +84,7 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-1146675"/>
                   <text value="Edit product"/>
                 </properties>
               </component>
@@ -81,7 +95,9 @@
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-1509377"/>
+            </properties>
             <border type="none"/>
             <children>
               <component id="3115d" class="javax.swing.JButton" binding="soldProductsButton" default-binding="true">
@@ -89,6 +105,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-1146675"/>
                   <text value="Sold products"/>
                 </properties>
               </component>
@@ -106,6 +123,7 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-58473"/>
           <text value="Firstname Lastname"/>
         </properties>
       </component>
@@ -114,6 +132,7 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-1146675"/>
           <text value="Change profile"/>
         </properties>
       </component>
@@ -122,7 +141,9 @@
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1509377"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
@@ -131,7 +152,9 @@
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1509377"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="3cd9f" class="javax.swing.JLabel">
@@ -140,6 +163,7 @@
             </constraints>
             <properties>
               <font size="20"/>
+              <foreground color="-58473"/>
               <text value="Admin"/>
             </properties>
           </component>
@@ -150,7 +174,9 @@
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1509377"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="79791" class="javax.swing.JButton" binding="logOutButton">
@@ -158,6 +184,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-1146675"/>
               <text value="Log out"/>
             </properties>
           </component>
@@ -166,7 +193,9 @@
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-1509377"/>
+            </properties>
             <border type="none"/>
             <children/>
           </grid>
@@ -177,7 +206,9 @@
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1509377"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
