--- a/src/main/java/Handelsakademin/StoreProgram/InventoryForm.form
+++ b/src/main/java/Handelsakademin/StoreProgram/InventoryForm.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="592" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-1509377"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="e8b35" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -13,7 +15,9 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1509377"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="b9683" class="javax.swing.JLabel" binding="employeeNameLabel">
@@ -21,6 +25,7 @@
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-58473"/>
               <text value="Firstname Lastname"/>
             </properties>
           </component>
@@ -41,7 +46,9 @@
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1509377"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
@@ -50,7 +57,9 @@
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1509377"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="43d22" class="javax.swing.JButton" binding="goBackButton" default-binding="true">
@@ -58,6 +67,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-1146675"/>
               <text value="Go back"/>
             </properties>
           </component>
@@ -78,7 +88,9 @@
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1509377"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="7abca" class="javax.swing.JLabel">
@@ -86,7 +98,9 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-1509377"/>
               <font size="20"/>
+              <foreground color="-58473"/>
               <text value="Inventory"/>
             </properties>
           </component>
@@ -97,7 +111,9 @@
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1509377"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
@@ -106,7 +122,9 @@
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1509377"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
@@ -115,7 +133,9 @@
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1509377"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="7ef01" class="javax.swing.JLabel" binding="orderLabel">
@@ -131,10 +151,12 @@
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-1509377"/>
+            </properties>
             <border type="none"/>
             <children>
-              <component id="686cc" class="javax.swing.JLabel" binding="cusotmerNameLabel">
+              <component id="686cc" class="javax.swing.JLabel" binding="customerNameLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -151,7 +173,9 @@
                 <children>
                   <component id="79ce0" class="javax.swing.JList" binding="chosenOrderList">
                     <constraints/>
-                    <properties/>
+                    <properties>
+                      <background color="-1509377"/>
+                    </properties>
                   </component>
                 </children>
               </scrollpane>
@@ -162,7 +186,9 @@
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-1509377"/>
+            </properties>
             <border type="none"/>
             <children>
               <grid id="1446d" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -170,7 +196,9 @@
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
-                <properties/>
+                <properties>
+                  <background color="-1509377"/>
+                </properties>
                 <border type="none"/>
                 <children>
                   <component id="ef1e3" class="javax.swing.JLabel">
@@ -178,6 +206,7 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <background color="-1509377"/>
                       <text value="Current status:"/>
                     </properties>
                   </component>
@@ -194,6 +223,7 @@
                   <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-1146675"/>
                   <text value="Change status"/>
                 </properties>
               </component>
@@ -210,6 +240,7 @@
                   <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-1146675"/>
                   <text value="Send transport"/>
                 </properties>
               </component>
@@ -222,7 +253,9 @@
         <constraints>
           <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1509377"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
@@ -230,13 +263,17 @@
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1509377"/>
+        </properties>
         <border type="none"/>
         <children>
           <grid id="29410" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints/>
-            <properties/>
+            <properties>
+              <background color="-1509377"/>
+            </properties>
             <border type="none"/>
             <children>
               <component id="d8664" class="javax.swing.JList" binding="orderList">
@@ -245,13 +282,16 @@
                     <preferred-size width="150" height="50"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <background color="-1509377"/>
+                </properties>
               </component>
               <component id="d682e" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-1509377"/>
                   <text value="Orders"/>
                 </properties>
               </component>
